<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="294dp"
            android:layout_height="51dp"
            android:text="@string/o_que"
            android:textSize="30sp"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.309"/>
    <TextView
            android:text="@string/daltonismo_uma_perturba_o_da_percep_o_visual_caracterizada_pela_incapacidade_de_diferenciar_todas_ou_algumas_cores_tem_geral_dificuldade_de_distinguir_o_verde_do_vermelho"
            android:layout_width="354dp"
            android:layout_height="118dp"
            android:id="@+id/textView"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.195"
            android:layout_marginTop="84dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>
    <TextView
            android:text="@string/fa_a_o_teste"
            android:layout_width="208dp"
            android:layout_height="46dp" android:id="@+id/textView2" android:textSize="30sp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.046"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.322"/>
    <TextView
            android:text="Suas Respostas"
            android:layout_width="157dp"
            android:layout_height="37dp"
            android:id="@+id/textView4"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.928" app:layout_constraintVertical_bias="0.339"
            android:textSize="20sp" android:textAlignment="center"/>
    <Button
            android:text="@string/teste_1"
            android:layout_width="166dp"
            android:layout_height="55dp" android:id="@+id/bteste1" android:layout_weight="1"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toStartOf="@+id/resposta1"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.17"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.04" android:onClick="clique"/>
    <TextView
            android:layout_width="157dp"
            android:layout_height="35dp"
            android:id="@+id/resposta1"
            android:textSize="24sp" android:hint="@string/resposta_1"
            android:textAlignment="center" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/resposta2"
            app:layout_constraintVertical_bias="0.263" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.977"/>
    <Button
            android:text="@string/teste_2"
            android:layout_width="166dp"
            android:layout_height="55dp" android:id="@+id/bteste2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/bteste1" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/bteste3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/resposta2"
            android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="0.44" android:onClick="clique"
            app:layout_constraintHorizontal_bias="0.19"/>
    <TextView
            android:layout_width="157dp"
            android:layout_height="37dp" android:id="@+id/resposta2"
            android:textSize="24sp" android:hint="@string/resposta_2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textAlignment="center" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.62" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.96"/>
    <Button
            android:text="@string/teste_3"
            android:layout_width="166dp"
            android:layout_height="55dp" android:id="@+id/bteste3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/resposta3"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.181" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.745"
            android:onClick="clique"/>
    <TextView
            android:layout_width="157dp"
            android:layout_height="37dp" android:id="@+id/resposta3"
            android:textSize="24sp" android:hint="@string/resposta_3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.751"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.93"
            android:textAlignment="center" android:layout_marginEnd="8dp"/>
    <Button
            android:text="@string/verificar"
            android:layout_width="166dp"
            android:layout_height="55dp"
            android:id="@+id/bresultado"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/vResultado"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.163"
            app:layout_constraintVertical_bias="0.936" android:onClick="clique"/>
    <TextView
            android:layout_width="166dp"
            android:layout_height="55dp"
            android:id="@+id/vResultado" android:textSize="20sp"
            android:hint="@string/resultado"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.967"
            android:textAlignment="center" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>